--- a/css/style.css
+++ b/css/style.css
@@ -1,65 +1,5 @@
-*{
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
-    font-style: italic;
-    color: var(--text-color);
-    list-style: none;
-}
 
-:root{
-    --purple-dark:#2D033B;
-    --purple: #810CA8;
-    --purple-light:#C147E9;
-    --pink:#E5B8F4;
-    --text-color: #F7EFE5;
-    --padding: 1.5rem;
-}
-.btn{
-    padding: 0.5rem;
-    border: 0;
-    border-radius: 25px;
-    cursor: pointer;
-}
-/*header start*/
-.header{
-    background: var(--purple);
-    padding: var(--padding) var(--padding) 0.5rem var(--padding);
-    display: flex;
-    justify-content: space-between;
-}
-.company-name{
- 
-    font-size: 1.5rem;
-}
-.header-right,nav{
-    display: flex;
-    justify-content: center;
-}
-/*header end*/
-/*navigation start*/
-.nav-list{
-    display: flex;
-    gap: 1rem;
-    margin: auto 0;
-}
-.news-link{
-    position: relative;
-}
-.news-count{
-    display: inline-block;
-    height: 25px;
-    width: 25px;
-    text-align: center;
-    position:absolute;
-    right: -20px;
-    top: -20px;
-    border: 2px solid var(--text-color);
-    border-radius: 50%;
-}
-/* navigation end*/
+
 /*about start*/
 .about{
     height: 100vh;
@@ -143,6 +83,13 @@
     font-weight: bold;
     font-size: 20px;
     cursor: pointer;
+    
+}
+.card__button:hover{
+    color: var(--purple);
+    background: var(--text-color);
+    outline: 2px solid var(--purple);
+    transition: 1sec;
 }
 /*product end*/
 /* product pages start*/
@@ -173,6 +120,20 @@
     .course-title{
         transform: translateY(25px);
         box-shadow: 0;
+    }
+    .course-btn{
+        padding: 0.75rem;
+        width: 150px;
+        font-size: larger;
+        font-weight: bold;
+        background: var(--text-color);
+        color: var(--purple);
+        border: 3px var(--purple) solid;
+        transform: translateY(-75px);
+    }
+    .course-btn:hover{
+        box-shadow: 0px 0px 22px 5px rgba(216, 21, 230, 0.4);
+
     }
     .offset1-right{
         transform: translatey(-25px);
@@ -213,76 +174,6 @@
     justify-content: space-around   ;
     align-items: center;
 }
-.purchase__form{
-    background: var(--text-color);
-    padding: var(--padding);
-    width: 350px;
-    color: var(--pink);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 25px;
-    box-shadow: 0px 0px 22px 5px rgba(0,0,0,0.2);
-}
-
-
-.purchase__form label{
-    color: var(--purple);
-    font-weight: bold;
-    font-style: normal;
-    width: 250px;
-    margin: 30px 0 10px 0;
-}
-.purchase__form input{
-    font-style: normal;
-    color: var(--purple-dark);
-    border: 2px var(--purple) solid;
-    border-radius: 15px;
-    padding: 8px;
-    width: 210px;
-    
-}
-.purhase__btn{
-    color: var(--purple);
-    font-weight: bold;
-    font-style: normal;
-    font-size: 18px;
-    border: 2px var(--purple) solid;
-    width: 210px;
-    margin-top: 40px;
-}
 /*purchase end*/
-/*footer start*/
-.footer{
-    display: flex;
-    justify-content: space-between;
-    gap: 0.5rem;
-    background: var(--text-color);
-    padding: 1rem;
-    flex-wrap: wrap;
-}
-.footer h4,.footer a,.footer i{
-    color: var(--purple-light);
-}
-.footer__right ul{
-    display: flex;gap: 0.5rem;
-    flex-wrap: wrap;
-}
 
-/*footer end*/
-/**/
 
-@media (max-width:480px){
-     .header{
-        flex-direction: column;
-        align-items: center;
-        gap: 20px;
-    }
-    .purchase__form{
-        width: 250px;
-    }
-    
-    
-}
-/**/
