--- a/src/style.css
+++ b/src/style.css
@@ -443,6 +443,11 @@ line-height: 1.5em;
   margin: 0;
   text-decoration: none;
 }
+.login__logo {
+  padding-top: 10px;
+  padding-left: 10px;
+  max-width: 20%;
+}
 .login-form {
   color: rgba(0,0,0,0.6);
 }
