--- a/css/product.css
+++ b/css/product.css
@@ -74,4 +74,7 @@ main li{
     .product-left,.product-right{
         width: 80%;
     }
+    .product-right{
+        border: 2px solid var(--text-color);
+    }
 }
