--- a/css/cart.css
+++ b/css/cart.css
@@ -100,6 +100,7 @@ main{
     form{
         width: 230px;
         text-align: center;
+        padding: 2px;
     }
     .cart{
         width: 90%;
