--- a/style.css
+++ b/style.css
@@ -42,7 +42,6 @@ main {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,5);
   }
 .product {
-   /* flex: 1;*/
     margin: 10px;
     background-color: #fff;
     padding: 20px;
@@ -65,9 +64,6 @@ main {
     border: none;
     cursor: pointer;
 }
-section h1{
-    text-align: center;
-}
 footer {
     display:flex;
     justify-content: space-around;
@@ -83,4 +79,16 @@ footer {
     text-align: end;
     font-size:1.2rem;
     padding:2px;
+  }
+  @media screen and (max-width: 500px) {
+    header {
+        flex-direction: column;
+        gap:1rem;
+        padding :1rem;
+    }
+    main {
+         grid-template-columns: repeat(1,1fr);
+         grid-gap: 1rem;
+         flex-wrap: wrap;
+     }
   }
