--- a/style.css
+++ b/style.css
@@ -31,12 +31,23 @@ body{
     width: 100%;
     max-width: 100%;
     margin: auto;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
 
 }
-img{
+.img{
     width: 100%;
-    height: auto;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    
 
+}
+.flex-center{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 .btn{
     border: none;
@@ -54,6 +65,9 @@ img{
 /* reset code and common code ends here  */
 
 /* navbar starts here  */
+#menu-icon{
+    display: none;
+}
 
 nav{
    
@@ -76,7 +90,7 @@ nav{
     align-items: center;
     justify-content: space-between;
 } */
-.nav-bar1{
+#nav-bar1{
     background-color: rgba(236, 20, 56, 0.512);
     color: #fff;
     display: flex;
@@ -110,6 +124,79 @@ nav{
     color: black;
 }
 /* navbar ends here  */
+
+/* header starts here  */
+.header{
+    
+}
+.banner {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+.container{
+    position: relative;
+    color: rgb(213, 24, 24);
+    text-align: center;
+    font-size: 4rem;
+    font-weight: 800;
+    
+    
+    
+}
+
+/* img resposiveness */
+
+
+.container .btn__header{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* -ms-transform: translate(-50%, -50%); */
+    background-color: rgb(82, 8, 8);
+    color: white;
+    font-size: 20px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 6px;
+    box-shadow: var(--box-shadow);
+    margin-top: 3rem;
+    animation-name: example;
+    animation-duration: 5s;
+    animation-iteration-count:infinite;
+
+   
+
+    
+}
+.container .btn:hover {
+    background-color: black;
+  }
+  @keyframes example {
+    0%   {background-color:red; }
+    25%  {background-color:yellow; }
+    50%  {background-color:blue; }
+    75%  {background-color:green; }
+    100% {background-color:red;}
+  }
+  .banner__title{
+    position: absolute;
+    transform: translate(-50%, -50%);
+    margin-top: 0;
+    font-size: 4rem;
+    padding: 1rem;
+    border-radius: var(--border-radius);
+   
+    
+  }
+  
+
+/* header ends here  */
 
 
 
@@ -213,14 +300,25 @@ nav{
 
     .nav-bar1{
         flex-direction: column;
+        position: sticky;
+    
         
     }
     .nav-bar2{
         flex-direction: column;
         gap: 1rem;
         padding: 1rem 0;
+        
     }
-
+    #menu-icon{
+        display: block;
+        text-align: center;
+        margin: 1rem 0;
+        cursor: pointer;
+    }
+.hidden{
+    display: none;
+}
 
 }
 
@@ -235,6 +333,14 @@ nav{
         gap: 1rem;
         padding: 1rem 0;
     }
+    .footer{
+        
+        display: flex;
+        flex-direction: column;
+    }
+    .footer__subscription{
+        flex-direction: column;
+    }
 }
 
 @media (max-width: 600px){
@@ -247,7 +353,13 @@ nav{
         gap: 1rem;
         padding: 1rem 0;
     }
-    
+    .footer{
+        display: flex;
+        flex-direction: column;
+    }
+    .footer__subscription{
+        flex-direction: column;
+    }
 }
 
 
