--- a/products/product-style.css
+++ b/products/product-style.css
@@ -62,6 +62,9 @@ h1{
 del{
     text-decoration: line-through;
 }
+.p__amnt{
+    width: 3rem;
+}
 .flex__container{
     display: flex;
     align-items: center;
@@ -72,4 +75,30 @@ del{
     flex-direction: column;
     justify-content: space-around;
     margin: 7%;
+}
+
+form{
+    width: 30rem;
+   height: 30rem;
+    margin: auto;
+}
+.form{
+    margin: 10%;
+    display: flex;
+    flex-direction: column;
+}
+.form__header{
+    width: 30%;
+    border-bottom: 2px solid;
+}
+input{
+   width: 20rem;
+    padding: 7px;
+}
+input{
+    border-radius: var(--btn-border-radius);
+    -webkit-border-radius: var(--btn-border-radius);
+    -moz-border-radius: var(--btn-border-radius);
+    -ms-border-radius: var(--btn-border-radius);
+    -o-border-radius: var(--btn-border-radius);
 }
