--- a/main.css
+++ b/main.css
@@ -1,12 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@300;400;500&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Urbanist:wght@300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans&display=swap');
 
 
 
 :root {
   --primary-color: #000;
-  --font-bold: "Montserrat", sans-serif;
+  --font-family: font-family: 'Urbanist', sans-serif;
 }
 
 html {
@@ -19,21 +18,21 @@ html {
 }
 
 h1 h2 h3 h4 h5 h6 {
-  font-family: "Montserrat", sans-serif;
+  font-family: var(font-family);
 }
 
 /* navigation starts here */
 nav {
   display: flex;
-  background-color: #333;
-  color: #fff;
+  background-color: #fff;
+  color: #000;
   padding: 1.25em;
 }
 
 .logo {
   font-size: 1.5rem;
   margin-right: auto;
-  font-family: var(--font-bold);
+  font-family: var(font-family);
   font-weight: 900;
 }
 
@@ -48,11 +47,11 @@ nav {
 .menu li {
   margin-left: 0.6em;
   font-size: 1.1rem;
-  font-family: "Zilla Slab", serif;
+  font-family: var(font-family);
 }
 
 .menu a {
-  color: #fff;
+  color: #000;
   text-decoration: none;
 }
 
@@ -68,7 +67,7 @@ nav {
   padding: 0.6em 1.4em;
   border: none;
   cursor: pointer;
-  font-family: var(--font-bold);
+  font-family: var(font-family);
   font-weight: 700;
 }
 
@@ -103,7 +102,7 @@ nav {
   font-weight: 900;
   letter-spacing: 0.4rem;
   text-transform: uppercase;
-  font-family: "Montserrat", sans-serif;
+  font-family: var(font-family);
 }
 
 .banner__description {
@@ -116,16 +115,17 @@ nav {
 }
 
 .banner--btn {
-  background-color: #000000;
+  background-color: #fff;
   padding: 1.7em 3em;
   text-transform: uppercase;
+  color: #000;
 }
 
 /* Header ends here */
 
 /* product section starts here */
 #product-section {
-  max-width: 1300px;
+  max-width: 1200px;
   margin: auto;
   padding-left: 25px;
   padding-right: 25px;
@@ -142,7 +142,17 @@ nav {
   text-align: center;
   background-color: rgb(242, 242, 242);
   padding: 2rem;
+  transition: transform 0.2s;
 }
+
+.product:hover {
+  transform: scale(0.9);
+  -webkit-transform: scale(0.9);
+  -moz-transform: scale(0.9);
+  -ms-transform: scale(0.9);
+  -o-transform: scale(0.9);
+}
+
 
 .product img {
   max-width: 100%;
@@ -154,18 +164,65 @@ nav {
 
 .product .price {
   font-weight: bold;
-  color: #f44336;
+  color: #3f36f4;
+  font-size: 1.5rem;
 }
 
 .product button {
   background-color: #4CAF50;
   color: white;
-  padding: 0.5rem 1rem;
+  padding: 1rem 3rem;
   border: none;
   cursor: pointer;
   margin-top: 1rem;
+  transition: all 0.3s ease;
+}
+.product button:hover {
+  background-color: #000;
+  box-shadow: 0 0 10px #3e8e41;
+  transform: scale(1);
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
 }
 
 
 
 /* product section ends here  */
+
+/* footer starts here */
+
+footer {
+  background-color: #333;
+  color: #fff;
+  padding: 1rem 0;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  padding: 2em;
+}
+
+.footer-left, .footer-right {
+  width: 50%;
+}
+
+.footer-left {
+  text-align: left;
+}
+
+.footer-right {
+  text-align: right;
+}
+
+.footer__menu a {
+  color: #fff;
+  margin-left: 1rem;
+  text-decoration: none;
+}
+
+/* footer ends here */
