--- a/styles/style.css
+++ b/styles/style.css
@@ -147,7 +147,7 @@ main > section{
 }
 .welcome{
     width: 100%;
-    min-height: 80vh;
+    min-height: 90vh;
     background-image: url("../images/coffeeBeans.jpg");
     background-size: cover;
     background-repeat: no-repeat;
@@ -182,6 +182,11 @@ main > section{
     transition: transform 0.5s linear;
 }
 
+.welcome__btn a{
+    font-size: 1.5rem;
+    color: white;
+}
+
 .welcome__btn:hover{
     box-shadow: 1px 3px 3px 5px rgba(255, 255, 255, 0.2);
     transform: translate(0, .3rem);
@@ -202,6 +207,7 @@ main > section{
 .welcome__login{
     display: block;
     font-size: 2rem;
+    text-align: center;
     color: white;
     margin-top: 5px;
     border-radius: .2rem;
@@ -220,48 +226,69 @@ main > section{
 
 .about{
     width: 100%;
-    min-height: 40vh;
+    min-height: 60vh;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 .about__header{
+    margin-top: 1rem;
     font-size: 2rem;
+    height: 4rem;
 }
 
 .about__content{
-    width: 60%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    gap: 2rem;
+}
+
+.about__content p {
     background-color: var(--main-color3);
     color: white;
     font-size: 1.4rem;
     text-align: justify;
     padding: var(--padding);
     border-radius: 10px;
+    width: 32%;
+}
+
+.about__content p:not(:nth-child(2)){
+    align-self: flex-end;
 }
 
 .coffee-varieties{
     min-height: 100vh;
-    background-color: var(--main-color1);
-    justify-content: space-evenly;
+    /* background-color: var(--main-color1); */
+    justify-content: space-around;
+    padding: var(--padding);
 }
 
 .coffee-varieties__header{
     font-size: 2rem;
+    height: 10vh;
 }
 
 .coffee-varieties__content{
     width: 80%;
     height: 80%;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, auto);
     gap: 1rem;
 }
 
 .coffee-card{
-    /* background-color: #4F322E; */
     padding: var(--padding);
+    background-color: #b98775c0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
+
 
 .coffee-card__header{
     font-size: 1.5rem;
@@ -270,9 +297,6 @@ main > section{
     text-align: center;
 }
 
-.coffee-card__content{
-
-}
 
 .coffee-card__content p{
     text-align: justify;
@@ -280,9 +304,21 @@ main > section{
 
 .coffee-card__content img{
     width: 90%;
-    height: 40%;
+    height: 60%;
+    aspect-ratio: 3/4;
     display: block;
     margin: auto;
+}
+
+.coffee-card__footer > button{
+    font-size: 1.1rem;
+    width: 10rem;
+    height: 3rem;
+    background-color: white;
+}
+
+.coffee-card__footer > button:hover{
+    border: 2px solid var(--main-color2);
 }
 /* main styling ends */
 
@@ -365,6 +401,20 @@ footer {
     .welcome__btn{
         width: 30%;
     }
+
+    .about__content{
+        flex-direction: column;
+        gap: 1.5rem;
+    }
+    
+    .about__content p {
+        width: 90%;
+    }
+
+    .coffee-varieties__content{
+        width: 90%;
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 @media screen and (max-width: 600px) {
@@ -416,4 +466,20 @@ footer {
         /* height: 3rem;
         font-size: 1.5rem; */
     }
+
+    .about__content{
+        padding: var(--padding);
+        flex-direction: column;
+        gap: 1rem;
+    }
+    
+    .about__content p {
+        width: 90%;
+    }
+
+    .coffee-varieties__content{
+        width: 90%;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
 }
