added poorly done cart-page

--- a/styles/style.css
+++ b/styles/style.css
@@ -32,7 +32,6 @@ i:hover, a:hover, button:hover, .btn:hover{
     width: 90vw;
     height: 100vh;
     margin: auto;
-    /* background-color: beige; */
 }
 
 /* header styling starts */
@@ -277,7 +276,7 @@ main > section{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, auto);
-    gap: 1rem;
+    gap: 2rem;
 }
 
 .coffee-card{
@@ -287,8 +286,13 @@ main > section{
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    transition: transform 0.3s linear;
 }
 
+.coffee-card:hover{
+   cursor: pointer;
+   transform: scale(1.04);
+}
 
 .coffee-card__header{
     font-size: 1.5rem;
@@ -296,7 +300,6 @@ main > section{
     color: white;
     text-align: center;
 }
-
 
 .coffee-card__content p{
     text-align: justify;
